--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: amazon_clone_tutorial
 description: A new Flutter project.
 
-# The following line prevents the package from being accidentally published to
+# The following line prevents the package from being accidentally published to the
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
